# first-crew-02-25

./: NOTES.txt  README.md
home_mgt/: README.md  crew_01.py  pyproject.toml
home_mgt/Documents/: Prompt_Choherence.md
home_mgt/src/home_mgt/: crew.py  home_tasks.md  main.py
home_mgt/src/home_mgt/config/: agents.yaml  tasks.yaml
